editor: fixed padding autosize creep issue. when auto growing in composers that have irregular padding, the first line of text would eventually creep out of view. this was because iframe inherited padding from text area, instead of body.

--- a/plugins/editor/sass/editor.scss
+++ b/plugins/editor/sass/editor.scss
@@ -244,7 +244,6 @@ affect, so it's not doing anything */
 .js-editor-fullpage .TextBoxWrapper .BodyBox,
 .js-editor-fullpage .TextBoxWrapper .wysihtml5-sandbox {
    width: 100% !important;
-   padding: 10px !important;
 }
 
 /* Fix some content boxes */
